--- a/scss/main.css
+++ b/scss/main.css
@@ -989,7 +989,7 @@ body {
     height: 3em;
   }
   #home-services .container .card > div {
-    padding: .5em 0em 1em 1em;
+    padding: 0.5em 0em 1em 1em;
   }
   #home-services .container .card > div h3 {
     margin-bottom: 1em;
@@ -1141,7 +1141,7 @@ body {
   }
   #why .container .heading h2 {
     font-size: 2em;
-    margin-bottom: .4em;
+    margin-bottom: 0.4em;
   }
   #why .container .heading p {
     line-height: 1.5;
@@ -1173,11 +1173,12 @@ body {
     max-width: 450px;
     background-color: white;
     text-align: center;
+    position: relative;
   }
   #why .container .cards .card .circle {
     background-color: var(--main-primary-color);
     padding: 1em;
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
     border-radius: 50%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1194,7 +1195,7 @@ body {
   }
   #why .container .cards .card h3 {
     font-size: 1.5em;
-    margin-bottom: .3em;
+    margin-bottom: 0.3em;
   }
   #why .container .cards .card p {
     line-height: 1.5;
@@ -1206,7 +1207,7 @@ body {
   #home-gallery {
     width: 100%;
     padding: var(--padding-xl) var(--padding-md);
-    background-color: #F6FAF7;
+    background-color: #f6faf7;
   }
   #home-gallery .heading {
     display: -webkit-box;
@@ -1259,6 +1260,280 @@ body {
     height: 100%;
     top: 0;
     left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  #test {
+    padding: var(--padding-xl) var(--padding-md) 15em var(--padding-md);
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/assets/img10m.webp) center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/img10m.webp) center/cover;
+  }
+  #test .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 1em;
+  }
+  #test .container .item {
+    color: white;
+  }
+  #test .container h2 span {
+    font-weight: bold;
+    font-size: 2em;
+    margin-right: 0.1em;
+  }
+  #test .container p {
+    line-height: 1.5;
+  }
+  #why-over {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 90%;
+    margin: auto;
+    margin-top: -175px;
+    background-color: white;
+    -webkit-box-shadow: var(--box-shadow);
+            box-shadow: var(--box-shadow);
+    max-width: 700px;
+    overflow: hidden;
+  }
+  #why-over .text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 2em;
+    text-align: center;
+    width: 100%;
+    position: relative;
+  }
+  #why-over .text span {
+    color: var(--main-primary-color);
+  }
+  #why-over .text h2 {
+    font-size: 1.5em;
+    margin-bottom: 0.1em;
+  }
+  #why-over .text .swiper-container {
+    margin: var(--margin-md) 0;
+    width: 100%;
+    max-width: 400px;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #why-over .text .swiper-container .swiper-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-slide {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 1em 2em;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content .stars,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content .stars,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content .stars {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 1em;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content .stars img,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content .stars img,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content .stars img {
+    margin-right: 0.5em;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content p,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content p,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content p {
+    line-height: 1.5;
+    padding-bottom: 1em;
+    max-width: 500px;
+    font-size: .9em;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content .info,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content .info,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content .info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 1em;
+    width: 100%;
+    max-width: 300px;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content .info img,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content .info img,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content .info img {
+    width: 3em;
+    height: 3em;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content .info > div,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content .info > div,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content .info > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content .info > div h4,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content .info > div h4,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content .info > div h4 {
+    font-weight: bold;
+    margin-bottom: 0.4em;
+  }
+  #why-over .text .swiper-container .swiper-wrapper .swiper-1 .swiper-content .info > div p,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-2 .swiper-content .info > div p,
+  #why-over .text .swiper-container .swiper-wrapper .swiper-3 .swiper-content .info > div p {
+    padding: 0;
+    font-weight: lighter;
+  }
+  #why-over .text .swiper-next-custom {
+    position: absolute;
+    top: 50%;
+    right: 1em;
+    background-color: var(--main-primary-color);
+    z-index: 10;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: var(--padding-sm);
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  #why-over .text .swiper-next-custom img {
+    width: .6em;
+    height: .6em;
+  }
+  #why-over .text .swiper-prev-custom {
+    padding: var(--padding-sm);
+    top: 50%;
+    left: 1em;
+    background-color: var(--main-primary-color);
+    z-index: 10;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    cursor: pointer;
+    position: absolute;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  #why-over .text .swiper-prev-custom img {
+    width: .6em;
+    height: .6em;
+  }
+  #why-over .img-container {
+    position: relative;
+    height: 100%;
+    display: none;
+  }
+  #why-over .img-container img {
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
@@ -1419,6 +1694,43 @@ body {
     -ms-grid-columns: 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr;
   }
+  #home-gallery .grid .item {
+    height: 350px;
+  }
+  #test {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/assets/img10.jpg) center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/img10.jpg) center/cover;
+  }
+  #test .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1em;
+    margin: auto;
+    max-width: 1200px;
+  }
+  #why-over {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    place-items: center;
+    width: 90%;
+    margin-top: -200px;
+    max-width: 900px;
+  }
+  #why-over .text {
+    padding: 1em;
+  }
+  #why-over .img-container {
+    display: block;
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -1453,6 +1765,9 @@ body {
   #small-contact .overlay {
     border-radius: 1em;
   }
+  #test {
+    background-attachment: fixed;
+  }
   #why .container .cards {
     -ms-grid-columns: (1fr)[3];
         grid-template-columns: repeat(3, 1fr);
@@ -1463,8 +1778,8 @@ body {
   }
   #why .container .cards .card {
     max-width: 400px;
-    -webkit-transition: all .5s;
-    transition: all .5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
   }
   #why .container .cards .card:hover {
     -webkit-transform: translateY(-10px);
