--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -18,3 +18,78 @@
 .btn-primary {
     background-color: var(--main-primary-color);
 }
+.fixed {
+    position: fixed;
+    bottom: 1em;
+    right: .5em;
+    display: flex;
+    flex-direction: column;
+    z-index: 19;
+}
+
+.top-link {
+    transition: all 0.25s ease-in-out;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    padding: 1px;
+    width: 2.5rem;
+    height: 2.5rem;
+    background: var(--main-primary-color);
+    border: 0;
+    position: relative;
+
+    &.show {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    &.hide {
+        visibility: hidden;
+        opacity: 0;
+    }
+
+    img {
+        width: 1.5em;
+        height: 1.5em;
+    }
+}
+
+// .top-link:nth-child(1){
+//   margin-bottom: .5em;
+
+// }
+
+// Text meant only for screen readers.
+.screen-reader-text {
+    position: absolute;
+    clip-path: inset(50%);
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    word-wrap: normal !important;
+    clip: rect(1px, 1px, 1px, 1px);
+
+    &:focus {
+        display: block;
+        top: 5px;
+        left: 5px;
+        z-index: 100000; // Above WP toolbar
+        clip-path: none;
+        background-color: #eee;
+        padding: 15px 23px 14px;
+        width: auto;
+        height: auto;
+        text-decoration: none;
+        line-height: normal;
+        color: #444;
+        font-size: 1em;
+        clip: auto !important;
+    }
+
+}
