--- a/scss/layout/_footer1.scss
+++ b/scss/layout/_footer1.scss
@@ -5,6 +5,7 @@
     background-color: #222;
     z-index: 20;
     position: relative;
+
     .container {
       width: 100%;
       max-width: 1200px;
@@ -14,71 +15,87 @@
         "logo logo"
         "two three"
         "contact contact";
-// grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+      // grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
       grid-gap: 1rem;
+
       .col {
         display: flex;
         flex-direction: column;
         justify-content: center;
         padding: 1rem 0;
+
         h3 {
           margin-bottom: 1rem;
           // white-space: nowrap;
           color: white;
         }
+
         ul {
           list-style: none;
+
           li {
             margin-bottom: 0.5rem;
+
             a {
               text-decoration: none;
               color: white;
               overflow: auto;
-              &:hover, &:active{
+
+              &:hover,
+              &:active {
                 color: white;
                 text-decoration: 1px underline white;
               }
             }
+
             color: white;
           }
         }
       }
+
       .col:nth-child(2) {
         grid-area: two;
         padding: 1rem;
         justify-content: flex-start;
       }
+
       .col:nth-child(3) {
         grid-area: three;
         padding: 1rem;
         justify-content: flex-start;
       }
+
       .logo-contain {
         grid-area: logo;
         padding: 1rem;
         display: flex;
         justify-content: center;
         align-items: flex-start;
+
         img {
           width: 80%;
           max-width: 500px;
           height: 100%;
         }
       }
+
       .contact {
         grid-area: contact;
         background-color: var(--main-primary-color);
         border-radius: 1rem;
         padding: 1rem;
+
         h4 {
           color: white;
         }
+
         ul {
           li {
             display: flex;
             justify-content: flex-start;
             align-items: center;
-            & > div {
+
+            &>div {
               width: 2rem;
               height: 2rem;
               background-color: white;
@@ -87,18 +104,23 @@
               display: flex;
               justify-content: center;
               align-items: center;
+
               img {
                 width: 1rem;
                 height: 1rem;
               }
             }
+
             p {
               color: white;
             }
+
             a {
               color: white;
               text-decoration: none;
-              &:hover, &:active{
+
+              &:hover,
+              &:active {
                 color: white;
               }
             }
@@ -107,6 +129,7 @@
       }
     }
   }
+
   .credit {
     width: 100%;
     display: flex;
@@ -120,17 +143,20 @@
     text-align: center;
   }
 }
+
 @media (min-width: 1024px) {
   footer {
     .container {
       width: 100%;
       max-width: 55em;
       grid-template-areas: "logo two three contact";
+
       .logo-contain {
         padding: 0;
         height: 100%;
         justify-content: flex-start;
         align-items: flex-start;
+
         img {
           width: 200px;
           height: unset;
@@ -143,8 +169,16 @@
     }
   }
 }
+
 @media (min-width: 1200px) {
+  #small-contact.last-misc {
+    margin-bottom: -4em;
+    z-index: 100;
+  }
+
   footer {
+    padding-top: 8em;
+
     .container {
 
       .logo-contain {
