--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -544,6 +544,7 @@
         box-shadow: var(--box-shadow);
         max-width: 700px;
         overflow: hidden;
+        margin-bottom: 5em;
 
 
         .text {
