--- a/scss/main.css
+++ b/scss/main.css
@@ -689,6 +689,78 @@ body {
   }
 }
 
+@media (min-width: 0em) {
+  #standard-heading {
+    height: 15rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    padding-bottom: 3rem;
+    position: relative;
+  }
+  #standard-heading h1 {
+    font-size: 2em;
+    letter-spacing: 2px;
+    color: white;
+    position: relative;
+    z-index: 3;
+  }
+  #standard-heading .abs-head {
+    position: absolute;
+    height: 8em;
+    max-width: 100%;
+    bottom: 1.5em;
+    z-index: 2;
+  }
+  #standard-heading picture {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  #standard-heading picture img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  #standard-heading .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+    background-color: black;
+    opacity: 60%;
+  }
+}
+
+@media (min-width: 768px) {
+  #standard-heading {
+    height: 15rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  #standard-heading {
+    height: 18rem;
+  }
+}
+
 .btn {
   cursor: pointer;
   padding: 15px 30px;
@@ -1902,6 +1974,358 @@ body {
     left: 0;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+}
+
+@media (min-width: 0em) {
+  #contact {
+    width: 100vw;
+    position: relative;
+  }
+  #contact .container {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 4em 1em;
+  }
+  #contact .container .form-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 4em;
+  }
+  #contact .container .form-container form {
+    width: 100%;
+    padding: 0em;
+    background-color: white;
+  }
+  #contact .container .form-container form h2 {
+    font-size: 2em;
+    margin-bottom: .5em;
+  }
+  #contact .container .form-container form .form-control {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 1em;
+  }
+  #contact .container .form-container form .form-control p {
+    margin-bottom: .5em;
+  }
+  #contact .container .form-container form .form-control input[type="text"] {
+    width: 100%;
+    border-radius: unset;
+    padding: .5em;
+    font-size: 16px;
+    background: #f8f9fc;
+    border: 1px solid #a4a4a4;
+  }
+  #contact .container .form-container form .form-control input[type="number"] {
+    width: 100%;
+    border-radius: unset;
+    padding: .5em;
+    border: 1px solid #a4a4a4;
+    font-size: 16px;
+    background: #f8f9fc;
+  }
+  #contact .container .form-container form .form-control input[type="email"] {
+    width: 100%;
+    border-radius: unset;
+    padding: .5em;
+    border: 1px solid #a4a4a4;
+    font-size: 16px;
+    background: #f8f9fc;
+  }
+  #contact .container .form-container form .form-control textarea {
+    max-width: 100%;
+    min-width: 100%;
+    border-radius: unset;
+    padding: 1em;
+    border: 1px solid #a4a4a4;
+    resize: none;
+    margin-bottom: 1em;
+    font-family: inherit;
+    background: #f8f9fc;
+    font-size: 16px;
+  }
+  #contact .container .form-container form .form-control select {
+    width: 100%;
+    padding: .5em;
+    border: 1px solid #a4a4a4;
+    -moz-appearance: none;
+         appearance: none;
+    color: #222;
+    margin: 0;
+    width: 100%;
+    font-family: inherit;
+    cursor: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    background-color: white;
+    position: relative;
+    background: #f8f9fc;
+    -webkit-appearance: none;
+    background-image: url(/assets/down-chevron.svg);
+    background-position: right 0.75em center;
+    background-repeat: no-repeat;
+    background-size: 15px;
+  }
+  #contact .container .form-container form .form-control button {
+    margin: 0;
+  }
+  #contact .container .form-container form .dropdown {
+    position: relative;
+  }
+  #contact .container .form-container form .dropdown img {
+    top: 2.3rem;
+    width: 1.5rem;
+    position: absolute;
+    right: 0.5rem;
+  }
+  #contact .container .info-container {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 2em;
+    -webkit-box-shadow: var(--box-shadow);
+            box-shadow: var(--box-shadow);
+    background-color: var(--main-primary-color);
+  }
+  #contact .container .info-container div.para {
+    width: 100%;
+    border-bottom: 1px solid white;
+    margin-bottom: 1em;
+    padding-bottom: 1em;
+    color: white;
+  }
+  #contact .container .info-container div.para p {
+    line-height: 1.5;
+  }
+  #contact .container .info-container h3 {
+    text-transform: uppercase;
+    margin-bottom: 1em;
+    color: white;
+  }
+  #contact .container .info-container ul {
+    list-style: none;
+    width: 100%;
+  }
+  #contact .container .info-container ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-bottom: 1em;
+  }
+  #contact .container .info-container ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  #contact .container .info-container ul li a img {
+    width: 2.5em;
+    height: 2.5em;
+    margin-right: 1em;
+  }
+  #contact .container .info-container ul li > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #contact .container .info-container ul li > div p {
+    color: white;
+    margin-bottom: 0.1em;
+    font-size: .8em;
+  }
+  body.dark-mode #contact .container .form-container h3 {
+    color: white;
+  }
+  body.dark-mode #contact .container .form-container form label p {
+    color: #222;
+  }
+  body.dark-mode #contact .container .form-container form label input[type="text"] {
+    background-color: #222222;
+    color: white;
+    border: none;
+  }
+  body.dark-mode #contact .container .form-container form label input[type="email"] {
+    background-color: #222222;
+    color: white;
+    border: none;
+  }
+  body.dark-mode #contact .container .form-container form label input[type="number"] {
+    background-color: #222222;
+    color: white;
+    border: none;
+  }
+  body.dark-mode #contact .container .form-container form label textarea {
+    border: none;
+    background-color: #222222;
+    color: white;
+  }
+  body.dark-mode #contact .container .form-container form label select {
+    border: none;
+    color: white;
+    background-color: #222222;
+    position: relative;
+  }
+  body.dark-mode #contact .container .info-container .items {
+    background-color: #222;
+  }
+  body.dark-mode #contact .container .info-container .item {
+    border-bottom: 1px solid var(--dark-gray);
+  }
+  body.dark-mode #contact .container .info-container .item p {
+    margin-bottom: 1em;
+  }
+  body.dark-mode #contact .container .info-container .item a {
+    color: white;
+  }
+  body.dark-mode #contact .container .info-container .item p:nth-of-type(2) {
+    color: #a4a4a4;
+  }
+}
+
+@media (min-width: 768px) {
+  #contact .container {
+    width: 100%;
+    max-width: 650px;
+    margin: auto;
+    padding: 4em 1em;
+  }
+  #contact .container .form-container {
+    margin-bottom: 2em;
+  }
+  #contact .container .form-container form {
+    width: 100%;
+  }
+  #contact .container .form-container form .flex {
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+  #contact .container .form-container form .form-control {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 1em;
+  }
+  #contact .container .form-container form .form-control p {
+    margin-bottom: .5em;
+  }
+  #contact .container .form-container form .form-control input[type="text"] {
+    width: 100%;
+    border-radius: unset;
+    height: 46px;
+  }
+  #contact .container .form-container form .form-control input[type="email"] {
+    width: 100%;
+    border-radius: unset;
+    height: 46px;
+  }
+  #contact .container .form-container form .form-control input[type="number"] {
+    width: 100%;
+    border-radius: unset;
+    height: 46px;
+  }
+  #contact .container .form-container form .form-control textarea {
+    height: 201px;
+    border-radius: unset;
+    margin-bottom: 1em;
+    font-family: inherit;
+    font-size: 16px;
+  }
+  #contact .container .form-container form .form-control select {
+    width: 100%;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    margin: 0;
+    width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    position: relative;
+  }
+  #contact .container .form-container form .form-control button {
+    margin: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  #contact .container {
+    width: 100%;
+    max-width: 1200px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 2fr 1fr;
+        grid-template-columns: 2fr 1fr;
+    grid-gap: 1rem;
+  }
+  #contact .container .form-container {
+    margin-bottom: unset;
+  }
+}
+
+@media (min-width: 1200px) {
+  #contact .container {
+    width: 100%;
+    max-width: 1200px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 2fr 1fr;
+        grid-template-columns: 2fr 1fr;
+    grid-gap: 3rem;
+  }
+  #contact .container .form-container {
+    margin-bottom: unset;
   }
 }
 /*# sourceMappingURL=main.css.map */
