--- a/scss/layout/_pageHeading.scss
+++ b/scss/layout/_pageHeading.scss
@@ -16,7 +16,7 @@
         }
         .abs-head {
             position: absolute;
-            height: 8em;
+            // height: 8em;
             max-width: 100%;
             bottom: 1.5em;
             z-index: 2;
