--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
 // 6. Page-specific styles
 @import
   'pages/home',
-  'pages/contact';
+  'pages/contact',
+  'pages/gallery';
 
 // var(--border-radius)
