--- a/scss/main.css
+++ b/scss/main.css
@@ -1505,12 +1505,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    overflow: hidden;
   }
   #why-over .text .swiper-container .swiper-wrapper {
     display: -webkit-box;
