--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -573,8 +573,9 @@
                 max-width: 400px;
                 position: relative;
                 display: flex;
-                justify-content: center;
-                align-items: center;
+                // justify-content: center;
+                // align-items: center;
+                overflow: hidden;
 
                 & .swiper-wrapper {
                     display: flex;
