--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -17,7 +17,8 @@
                 flex-direction: column;
                 width: 95%;
                 max-width: 360px;
-                align-self: flex-end;
+                align-self: flex-start;
+                margin-left: 1em;
 
                 .img-box {
                     height: 400px;
